Fixed detection of super-type methods in some edge cases.
Parse javap method-handle's JVM instruction.